--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
 
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
     useLibrary 'org.apache.http.legacy'
 
     compileSdkVersion 26
